# microdf

./: .buildinfo  .gitignore  CHANGELOG.md  CLAUDE.md  Makefile  README.md  agg.html  changelog.yaml  changelog_entry.yaml  custom_taxes.html  demo.html  environment.yml  examples.html  genindex.html  gini.html  home.html  income_measures.html  objects.inv  pyproject.toml  search.html  searchindex.js  setup.cfg  setup.py  test.ipynb  test_decile_rank.py  weighting.html
.github/: CONTRIBUTING.md  changelog_template.md
.github/workflows/: changelog_entry.yaml  master.yml  pr.yaml  versioning.yaml
_sources/: agg.ipynb  custom_taxes.ipynb  demo.ipynb  gini.ipynb
changelog.d/: fix-copy-performance.yaml  fix-count-nan-skipna.fixed.md  fix-drop-inplace-stale-weights.fixed.md  fix-gini-negatives.fixed.md  fix-groupby-tmp-weights-leak.fixed.md  fix-merge-row-align.fixed.md  fix-quantile-zero-weight-first-row.fixed.md  fix-rank-semantics.changed.md  fix-remove-dead-weighted-decorator.removed.md  fix-top-x-pct-share-ties.fixed.md  fix-weighted-stats-warn.added.md  fix-weights-index-alignment.fixed.md  migrate-to-app-token.yaml  switch-to-ruff.changed.md
docs/: _toc.yml  gini.ipynb  myst.yml
microdf/: __init__.py  _optional.py  agg.py  chart_utils.py  charts.py  concat.py  custom_taxes.py  generic.py  income_measures.py  inequality.py  io.py  microdataframe.py  microseries.py  poverty.py  style.py  tax.py  taxcalc.py  ubi.py  utils.py  weighted.py
microdf/tests/: conftest.py  test_decile_rank.py  test_generic.py  test_inequality.py  test_io.py  test_microseries_dataframe.py  test_optional_dependency.py  test_pandas3_compatibility.py  test_poverty.py  test_quantile_chg.py  test_tax.py  test_taxcalc.py  test_utils.py  test_weighted.py
