[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "microdf-python"
version = "1.2.2"
description = "Weighted pandas DataFrames and Series for survey microdata"
readme = "README.md"
authors = [
    { name = "Max Ghenis", email = "max@policyengine.org" }
]
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "pandas",
]

[project.optional-dependencies]
dev = [
    "codecov",
    "flake8",
    "flake8-pyproject",
    "black",
    "docformatter",
    "isort",
    "linecheck",
    "pytest",
    "pytest-cov",
    "setuptools",    "towncrier>=24.8.0",

]
# Note: Documentation uses MyST (Jupyter Book 2.0) which is installed via npm
# Run: cd docs && myst build --html

[tool.setuptools.packages.find]
where = ["."]
include = ["microdf*"]

[tool.isort]
profile = "black"
line_length = 79

[tool.black]
line-length = 79
target-version = ["py313"]

[tool.flake8]
max-line-length = 79
extend-ignore = ["E203", "W503"]

[tool.towncrier]
package = "microdf_python"
directory = "changelog.d"
filename = "CHANGELOG.md"
title_format = "## [{version}] - {project_date}"
issue_format = ""
underlines = ["", "", ""]

[[tool.towncrier.type]]
directory = "breaking"
name = "Breaking changes"
showcontent = true

[[tool.towncrier.type]]
directory = "added"
name = "Added"
showcontent = true

[[tool.towncrier.type]]
directory = "changed"
name = "Changed"
showcontent = true

[[tool.towncrier.type]]
directory = "fixed"
name = "Fixed"
showcontent = true

[[tool.towncrier.type]]
directory = "removed"
name = "Removed"
showcontent = true
