[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "microdf-python"
version = "1.2.3"
description = "Weighted pandas DataFrames and Series for survey microdata"
readme = "README.md"
authors = [
    { name = "Max Ghenis", email = "max@policyengine.org" }
]
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "pandas",
]

[project.optional-dependencies]
dev = [
    "codecov",
    "ruff>=0.9.0",
    "docformatter",
    "pytest",
    "pytest-cov",
    "setuptools",
    "towncrier>=24.8.0",
]
# Note: Documentation uses MyST (Jupyter Book 2.0) which is installed via npm
# Run: cd docs && myst build --html

[tool.setuptools.packages.find]
where = ["."]
include = ["microdf*"]

[tool.towncrier]
package = "microdf_python"
directory = "changelog.d"
filename = "CHANGELOG.md"
title_format = "## [{version}] - {project_date}"
issue_format = ""
underlines = ["", "", ""]

[[tool.towncrier.type]]
directory = "breaking"
name = "Breaking changes"
showcontent = true

[[tool.towncrier.type]]
directory = "added"
name = "Added"
showcontent = true

[[tool.towncrier.type]]
directory = "changed"
name = "Changed"
showcontent = true

[[tool.towncrier.type]]
directory = "fixed"
name = "Fixed"
showcontent = true

[[tool.towncrier.type]]
directory = "removed"
name = "Removed"
showcontent = true
